# bot

./: CMakeLists.txt  README.md
src/: bot.h  chessAPI.h  data.h  fen.h  game.h  main.cpp  makeimage.h  move.h  stockfish.h  telegramAPI.h  updateinfo.h
